--- a/core/res/res/values/dot_symbols.xml
+++ b/core/res/res/values/dot_symbols.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 /* Copyright 2017, dotOS
-**
+=======
+/* Copyright 2012, The Android Open Source Project**
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
 ** You may obtain a copy of the License at
@@ -19,5 +20,10 @@
 
   <!-- Package Manager -->
   <java-symbol type="array" name="config_forceEnabledComponents" />
+
+  <java-symbol type="bool" name="config_useSystemClockforRotationSensor" />
+
+  <!-- Package Manager -->
+  <java-symbol type="array" name="config_disabledComponents" />
 
 </resources>
