--- a/packages/SystemUI/res/values/dot_colors.xml
+++ b/packages/SystemUI/res/values/dot_colors.xml
@@ -59,4 +59,6 @@
  
     <color name="ripple_material_light">#40000000</color>
     <color name="ripple_material_dark">#40ffffff</color>
+	
+	<color name="qs_battery_color">#FFFFFF</color>
 </resources>
